sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: identifier expected but integer literal found.
		if ( plusPetitQue(i, value: i+1) == false ){
                                              ^AlgBubbleSort1:10: error: ')' expected but '}' found.
	}
        ^